update tmux config for tmux 2.4

--- a/roles/developer/files/tmux/keybindings.conf
+++ b/roles/developer/files/tmux/keybindings.conf
@@ -2,21 +2,21 @@
 set-window-option -g mode-keys vi
 
 # easy-to-remember split pane commands
-unbind % # the default vi-copy table binds % to split-window -h
+unbind % # the default copy-mode-vi table binds % to split-window -h
 bind | split-window -h
-unbind '"' # the default vi-copy table binds " to split-window -v
+unbind '"' # the default copy-mode-vi table binds " to split-window -v
 bind - split-window -v
-# todo: bind '-', the default vi-copy table to delete-buffer, to something else.
+# todo: bind '-', the default copy-mode-vi table to delete-buffer, to something else.
 
-# The vi-copy table is close to the Vim key bindings, but we can do better.
+# The copy-mode-vi table is close to the Vim key bindings, but we can do better.
 # `tmux prefix + Escape` starts copy mode.
 bind Escape copy-mode
 
-# The default vi-copy table maps 'v' to rectangle-toggle. Instead, bind 'v' to
+# The default copy-mode-vi table maps 'v' to rectangle-toggle. Instead, bind 'v' to
 # begin-selection and bind both V and Ctrl-v to rectangle-toggle. In Vim, Ctrl-V
 # enters visual block mode, which does the same thing as rectangle-toggle.
-unbind-key -t vi-copy 'v'
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'C-v' rectangle-toggle
-bind-key -t vi-copy 'V' rectangle-toggle
-bind-key -t vi-copy 'y' copy-selection
+unbind-key -T copy-mode-vi 'v'
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi 'V' send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
