--- a/roles/developer/files/tmux/osx.conf
+++ b/roles/developer/files/tmux/osx.conf
@@ -5,5 +5,5 @@
 set-option -g default-shell $SHELL
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
-#bind-key -t vi-copy 'y' copy-pipe pbcopy
-bind-key -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe pbcopy
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
