add docker-machine, docker-compose, and ctags packages

--- a/roles/developer/tasks/packages_Darwin.yml
+++ b/roles/developer/tasks/packages_Darwin.yml
@@ -16,6 +16,9 @@
     - reattach-to-user-namespace
     - jq
     - git-lfs
+    - docker-machine
+    - docker-compose
+    - ctags
   tags:
     - packages
 
