--- a/roles/developer/tasks/git.yml
+++ b/roles/developer/tasks/git.yml
@@ -32,7 +32,7 @@
 - name: git config alias.serve
   command: git config --global alias.serve 'daemon --reuseaddr --verbose --base-path=. --export-all ./.git'
 
-- name: git config alias.pr (thanks @jfrazelle!)
+- name: git config alias.pr (thanks @jessfraz!)
   raw: git config --global alias.pr '!pr() { git fetch origin pull/$1/head:pr-$1; git checkout pr-$1; }; pr'
 
 - name: git config apply.whitepace
