--- a/roles/developer/tasks/packages_Debian.yml
+++ b/roles/developer/tasks/packages_Debian.yml
@@ -44,6 +44,7 @@
     - jq
     - docker.io # once docker-ce is suported on zesty, use docker-ce instead
     - google-chrome-stable
+    - direnv
   tags:
     - packages
 
