--- a/roles/developer/tasks/git.yml
+++ b/roles/developer/tasks/git.yml
@@ -38,7 +38,7 @@
 - name: git config apply.whitepace
   command: git config --global apply.whitespace fix
 
-  # Make git rebase work correctly on OSX. Thanks @jfrazelle and https://www.git-tower.com/blog/make-git-rebase-safe-on-osx
+  # Make git rebase work correctly on OSX. Thanks @jessfraz and https://www.git-tower.com/blog/make-git-rebase-safe-on-osx
 - name: git config core.trustctime
   command: git config --global core.trustctime false
   when: ansible_os_family == 'Darwin'
@@ -58,16 +58,24 @@
 - name: git config push.default
   command: git config --global push.default simple
 
-- name: remove github.com insteadof section
-  command: "git config --global --remove-section url.git@github.com:"
+- name: remove insteadOf section
+  command: git config --global --remove-section "url.{{ item }}"
+  items:
+    - "git@github.com:"
   ignore_errors: yes # ignore any errors; when the option doesn't exist, git-config returns an error.
 
-- name: git config url.git@github.com:insteadOf
-  command: git config --global --add url.git@github.com:.insteadOf "{{ item }}"
-  with_items:
-    - git://github.com/
-    - "github:"
-    - https://github.com/
+- name: git config insteadOf
+  command: git config --global --add url.{{ item.0.base }}.insteadOf "{{ item.1 }}"
+  vars:
+    - insteadOfs:
+      - base: "git@github.com:"
+        urls:
+          - git://github.com/
+          - "github:"
+          - https://github.com/
+  with_subelements:
+    - "{{ insteadOfs }}"
+    - urls
 
 - name: git config web.browser
   command: git config --global web.browser open
@@ -78,6 +86,7 @@
 
 - name: git config version.prereleaseSuffix -alpha
   command: git config --global version.prereleaseSuffix -alpha
+
 - name: git config version.prereleaseSuffix -beta
   command: git config --global version.prereleaseSuffix -beta
 - name: git config version.prereleaseSuffix -rc
@@ -98,6 +107,17 @@
 - name: git config workspace e-mail
   command: git config -f "{{ ansible_env.HOME }}/.config/git/{{ item.name }}.inc" user.email {{ item.email }}
   with_items: "{{ workspaces }}"
+
+- name: remove insteadOf section
+  command: git config -f "{{ ansible_env.HOME }}/.config/git/{{ item.name }}.inc" --remove-section "url.{{ item.insteadOf.base }}"
+  with_items: "{{ workspaces }}"
+  ignore_errors: yes # ignore any errors; when the option doesn't exist, git-config returns an error.
+
+- name: git config workspace insteadOf
+  command: git config -f "{{ ansible_env.HOME }}/.config/git/{{ item.0.name }}.inc" --add url.{{ item.0.insteadOf.base }}.insteadOf "{{ item.1 }}"
+  with_subelements:
+    - "{{ workspaces }}"
+    - insteadOf.urls
 
 - name: git config includeIf workspace
   command: git config --global --replace-all includeIf."gitdir:{{ item.gitdir }}".path {{ item.name }}.inc
