--- a/roles/developer/tasks/packages_Debian.yml
+++ b/roles/developer/tasks/packages_Debian.yml
@@ -45,6 +45,10 @@
     - docker.io # once docker-ce is suported on zesty, use docker-ce instead
     - google-chrome-stable
     - direnv
+    - tree
+    - ffmpeg
+    - graphviz
+    - parallel
   tags:
     - packages
 
