pin minikube at v0.25.2

--- a/roles/developer/defaults/main.yml
+++ b/roles/developer/defaults/main.yml
@@ -19,6 +19,8 @@ gcloud_checksums:
   Darwin: "sha256:605332cb305a04d377572d61063db88433862521f1aa4887d3b3fbfaaf1519a2"
   Linux: "sha256:6e5c76999ff3f14621d26e3c76967dc4c43613344947ab42fcc764311642c898"
 gcloud_pkg: "google-cloud-sdk-{{ gcloud_version }}-{{ ansible_system | lower }}-x86_64.tar.gz"
+minikube_version: v0.25.2
+minikube_checksum: sha256:f108e0125e45297f74b34e0dfd1a8e015220305832d437507afc20250f8f6ea5
 
 insteadOfs:
   - base: "git@github.com:"
