--- a/roles/developer/tasks/packages_Darwin.yml
+++ b/roles/developer/tasks/packages_Darwin.yml
@@ -41,9 +41,9 @@
 
 - name: install hyperkit
   get_url:
-    url: https://storage.googleapis.com/minikube/releases/latest/docker-machine-driver-hyperkit
+    url: https://storage.googleapis.com/minikube/releases/{{ minikube_version }}/docker-machine-driver-hyperkit
     dest: /usr/local/bin/docker-machine-driver-hyperkit
-    checksum: sha256:8503151b9d3572a994aa3463f55c01e6f5f635aea6f90438aae040d177a24f57
+    checksum: "{{ minikube_checksum }}"
   tags:
     - packages
 
