reorder tmux windows after closing a window

--- a/roles/developer/files/tmux.conf
+++ b/roles/developer/files/tmux.conf
@@ -10,6 +10,8 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 #setw -g mouse-select-pane on
 set -g mouse on
 
+set -g renumber-windows on
+
 source-file ~/.config/tmux/keybindings.conf
 
 if-shell 'test "$(uname -s)" = Darwin' 'source-file ~/.config/tmux/osx.conf'
