split tmux panes into the same directory

--- a/roles/developer/files/tmux/keybindings.conf
+++ b/roles/developer/files/tmux/keybindings.conf
@@ -3,9 +3,9 @@ set-window-option -g mode-keys vi
 
 # easy-to-remember split pane commands
 unbind % # the default copy-mode-vi table binds % to split-window -h
-bind | split-window -h
+bind | split-window -h -c '#{pane_current_path}'
 unbind '"' # the default copy-mode-vi table binds " to split-window -v
-bind - split-window -v
+bind - split-window -v -c '#{pane_current_path}'
 # todo: bind '-', the default copy-mode-vi table to delete-buffer, to something else.
 
 # The copy-mode-vi table is close to the Vim key bindings, but we can do better.
