tmux: use bind-key consistently
Use `bind-key` instead of its alias, `bind`, consistently.

--- a/roles/developer/files/tmux/keybindings.conf
+++ b/roles/developer/files/tmux/keybindings.conf
@@ -2,15 +2,15 @@
 set-window-option -g mode-keys vi
 
 # easy-to-remember split pane commands
-unbind % # the default copy-mode-vi table binds % to split-window -h
-bind | split-window -h -c '#{pane_current_path}'
-unbind '"' # the default copy-mode-vi table binds " to split-window -v
-bind - split-window -v -c '#{pane_current_path}'
+unbind-key % # the default copy-mode-vi table binds % to split-window -h
+bind-key | split-window -h -c '#{pane_current_path}'
+unbind-key '"' # the default copy-mode-vi table binds " to split-window -v
+bind-key - split-window -v -c '#{pane_current_path}'
 # todo: bind '-', the default copy-mode-vi table to delete-buffer, to something else.
 
 # The copy-mode-vi table is close to the Vim key bindings, but we can do better.
 # `tmux prefix + Escape` starts copy mode.
-bind Escape copy-mode
+bind-key Escape copy-mode
 
 # The default copy-mode-vi table maps 'v' to rectangle-toggle. Instead, bind 'v' to
 # begin-selection and bind both V and Ctrl-v to rectangle-toggle. In Vim, Ctrl-V
