--- a/roles/developer/files/tmux/keybindings.conf
+++ b/roles/developer/files/tmux/keybindings.conf
@@ -8,6 +8,9 @@ unbind-key '"' # the default copy-mode-vi table binds " to split-window -v
 bind-key - split-window -v -c '#{pane_current_path}'
 # todo: bind '-', the default copy-mode-vi table to delete-buffer, to something else.
 
+# toggle synchronization of all panes in the current window
+bind-key a set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+
 # The copy-mode-vi table is close to the Vim key bindings, but we can do better.
 # `tmux prefix + Escape` starts copy mode.
 bind-key Escape copy-mode
