remap synchronize-panes and choose-buffer key bindings
Use = for synchronizing-panes and b for choose-buffer.

--- a/roles/developer/files/tmux/keybindings.conf
+++ b/roles/developer/files/tmux/keybindings.conf
@@ -8,8 +8,11 @@ unbind-key '"' # the default copy-mode-vi table binds " to split-window -v
 bind-key - split-window -v -c '#{pane_current_path}'
 # todo: bind '-', the default copy-mode-vi table to delete-buffer, to something else.
 
+bind-key b choose-buffer -Z
+
 # toggle synchronization of all panes in the current window
-bind-key a set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+unbind-key = # the default binding for = is choose buffer; use it for synchronizing panes instead.
+bind-key = set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
 
 # The copy-mode-vi table is close to the Vim key bindings, but we can do better.
 # `tmux prefix + Escape` starts copy mode.
