--- a/roles/developer/tasks/git.yml
+++ b/roles/developer/tasks/git.yml
@@ -39,7 +39,7 @@
   raw: git config --global alias.pr '!pr() { git fetch origin pull/$1/head:pr-$1; git checkout pr-$1; }; pr'
 
 - name: git config alias.prlog
-  raw: git config --global alias.prlog "log --format='tformat:##### %s%+b%n' --reverse origin/master..."
+  raw: git config --global alias.prlog "log --format='tformat:##### %s%n%+b%n' --reverse origin/master..."
 
 - name: git config apply.whitepace
   command: git config --global apply.whitespace fix
