set tmux's scrollback to 50000 lines

--- a/roles/developer/files/tmux.conf
+++ b/roles/developer/files/tmux.conf
@@ -5,6 +5,8 @@ set -g default-terminal "screen-256color"
 set -g terminal-overrides "screen-256color:Tc"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
+set -g history-limit 50000
+
 # a mouse
 #set -g mode-mouse on
 #setw -g mouse-select-pane on
