--- a/site.yml
+++ b/site.yml
@@ -1,11 +1,14 @@
 ---
 # file: site.yml
 - import_playbook: base.yml
+  tags:
+    - base
 
 - name: update Pis
   hosts: pi
   become: true
   roles:
+    - base
     - pi
   tags:
     - pi
